objects/Coupon_Request__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Can you please explain how this coupon code will be used?</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>Enter the number of coupons you would like to request.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting Approval</fullName>
                    <label>Waiting for Approval</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <inlineHelpText>Enter the expiration date of the coupon.</inlineHelpText>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Coupon Request</label>
    <listViews>
        <fullName>Academy_Team_Coupon_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Academy Team</label>
        <queue>Academy_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quantity__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Community_Coupon_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Community</label>
        <queue>Community</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>COUPON-{0000}</displayFormat>
        <label>Coupon Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupon Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>